--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
 
-# Created by https://www.gitignore.io/api/java,node,eclipse,intellij+all
-# Edit at https://www.gitignore.io/?templates=java,node,eclipse,intellij+all
+# Created by https://www.gitignore.io/api/java,code,node,eclipse,java-web,code-java,intellij+all
+# Edit at https://www.gitignore.io/?templates=java,code,node,eclipse,java-web,code-java,intellij+all
+
+### Code ###
+# Visual Studio Code - https://code.visualstudio.com/
+.settings/
+.vscode/
+tsconfig.json
+jsconfig.json
+
+### Code-Java ###
+# Language Support for Java(TM) by Red Hat extension for Visual Studio Code - https://marketplace.visualstudio.com/items?itemName=redhat.java
+
+.project
+.classpath
+factoryConfiguration.json
 
 ### Eclipse ###
 
@@ -12,7 +26,6 @@ tmp/
 *.swp
 *~.nib
 local.properties
-.settings/
 .loadpath
 .recommenders
 
@@ -62,10 +75,8 @@ local.properties
 
 ### Eclipse Patch ###
 # Eclipse Core
-.project
 
 # JDT-specific (Eclipse Java Development Tools)
-.classpath
 
 # Annotation Processing
 .apt_generated
@@ -178,6 +189,10 @@ modules.xml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+### Java-Web ###
+## ignoring target file
+target/
+
 ### Node ###
 # Logs
 logs
@@ -255,5 +270,4 @@ typings/
 # FuseBox cache
 .fusebox/
 
-# End of https://www.gitignore.io/api/java,node,eclipse,intellij+all
-
+# End of https://www.gitignore.io/api/java,code,node,eclipse,java-web,code-java,intellij+all
