--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack",
-  "version": "1.0.0",  
+  "version": "1.0.0",
   "author": "Daniel Rodrigues",
   "license": "MIT",
   "private": true,
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react-dom": "^16.6.1",
+    "react-redux": "^5.1.0",
+    "redux": "^4.0.1"
   }
 }
